--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="basic.css"/>
-    <link rel="stylesheet" type="text/css" href="header.css"/>
-    <link rel="stylesheet" type="text/css" href="footer.css"/>
-    <title>Современные игровые консоли</title>
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="css_files\basic.css"/>
+    <link rel="stylesheet" type="text/css" href="css_files\header.css"/>
+    <link rel="stylesheet" type="text/css" href="css_files\footer.css"/>
+    <link rel="stylesheet" type="text/css" href="css_files\main_grid.css"/>
+    <link rel="stylesheet" type="text/css" href="css_files\Upper_slider.css"/>
+    <title>Печеньки</title>
+    <script src="JS_files\script.js" defer></script>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Klee+One&display=swap" rel="stylesheet">
+
+
+
+
+
 </head>
 <body>
 
     <header>
         <div class="Header_Grid">
             <div class="Sing_In_window">
-                <p>Войти</p>
+                <a href="">Войти</a>
             </div>
             <div class="Plus_window">
                 <div class="Header_Oval"></div>
                 <!-- Значёк плюса ебать -->
             </div>
             <div class="Registration_window">
-                <p>Регистрация</p>
+                <a href="">Регистрация</a>
             </div>
 
         </div>
@@ -62,21 +74,49 @@
         <div class="main_grid">
             <div class="Main_Grid_Container">
                 <div class="item_Grid">
-                    <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                    <div class="image-container">
+                        <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                        <div class="overlay">
+                            <p>Ваш текст</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="item_Grid">
-                    <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                    <div class="image-container">
+                        <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                        <div class="overlay">
+                            <p>Ваш текст</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="item_Grid">
-                    <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                    <div class="image-container">
+                        <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                        <div class="overlay">
+                            <p>Ваш текст</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="item_Grid">
-                    <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                    <div class="image-container">
+                        <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                        <div class="overlay">
+                            <p>Ваш текст</p>
+                        </div>
+                    </div>
                 </div>
-
+                <div class="item_Grid">
+                    <div class="image-container">
+                        <img src="Tgr6rF0gываываыC8Q.png" alt="Image" />
+                        <div class="overlay">
+                            <p>Ваш текст</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Другие элементы item_Grid здесь -->
             </div>
-
         </div>
+        
         
     </main>
 
@@ -84,10 +124,6 @@
 
     <footer>
         <div class="triangle_bottom"></div>
-
     </footer>
-
-
-
 </body>
 </html>
