--- a/index.html
+++ b/index.html
@@ -48,18 +48,33 @@
             <div class="items">
                 <div class="item active">
                     <img src="Tgr6rF0gываываыC8Q.png">
+                    <div class="overlay">
+                        <p>Текст</p>
+                    </div>
                 </div>
                 <div class=" item next">
                     <img src="Tgr6rF0gываываыC8Q.png">
+                    <div class="overlay">
+                        <p>Текст</p>
+                    </div>
                 </div>
                 <div class="item">
                     <img src="Tgr6rF0gываываыC8Q.png">
+                    <div class="overlay">
+                        <p>Текст</p>
+                    </div>
                 </div>
                 <div class="item">
                     <img src="Tgr6rF0gываываыC8Q.png">
+                    <div class="overlay">
+                        <p>Текст</p>
+                    </div>
                 </div>
                 <div class="item prev">
                     <img src="Tgr6rF0gываываыC8Q.png">
+                    <div class="overlay">
+                        <p>Текст</p>
+                    </div>
                 </div>
                 <div class="button-container">
                     <div class="button"><i class="fas fa-angle-left"></i></div>
