--- a/registration.html
+++ b/registration.html
@@ -52,7 +52,7 @@
                 
             </div>
             <div class="form_container">
-                <p>Регистрация</p>
+                <p class="text_in_form">Регистрация</p>
 
                 <div class="reigistration_form_samll_window input_mail">
                     
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="Log_In">
-                    <input type="submit" class="subbmit" id="submit" name="submit" value="Отправить"  />
+                    <button class="Log_In_BTN"><p class="text_in_form">Войти</p></button>
 
                 </div>
 
