--- a/html_files/Posting.html
+++ b/html_files/Posting.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="css_files\basic.css"/>
-    <link rel="stylesheet" type="text/css" href="css_files\header.css"/>
-    <link rel="stylesheet" type="text/css" href="css_files\footer.css"/>
-    <link rel="stylesheet" type="text/css" href="css_files\Posting.css"/>
+    <link rel="stylesheet" type="text/css" href="../css_files/basic.css"/>
+    <link rel="stylesheet" type="text/css" href="../css_files/header.css"/>
+    <link rel="stylesheet" type="text/css" href="../css_files/footer.css"/>
+    <link rel="stylesheet" type="text/css" href="../css_files/registration.css"/>
     
     <title>Печеньки</title>
 
@@ -27,14 +27,14 @@
     <header>
         <div class="Header_Grid">
             <div class="Sing_In_window">
-                <a href="">Войти</a>
+                <a href="../html_files/logIn.html">Войти</a>
             </div>
             <div class="Plus_window">
                 <div class="Header_Oval"></div>
                 <!-- Значёк плюса ебать -->
             </div>
             <div class="Registration_window">
-                <a href="">Регистрация</a>
+                <a href="../html_files/registration.html">Регистрация</a>
             </div>
 
         </div>
@@ -42,12 +42,11 @@
     </header>
 
 
-
     <main>
         <div class="registration_form">
             <div class="left_picture_container">
                 <div class="div_picture_container">
-                    <img src="Tgr6rF0gываываыC8Q.png">
+                    <img src="../Tgr6rF0gываываыC8Q.png">
                 </div>
                 
             </div>
