--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <header>
         <div class="Header_Grid">
             <div class="Sing_In_window">
-                <a href="">Войти</a>
+                <a href="html_files\logIn.html">Войти</a>
             </div>
             <div class="Plus_window">
                 <div class="Header_Oval"></div>
                 <!-- Значёк плюса ебать -->
             </div>
             <div class="Registration_window">
-                <a href="">Регистрация</a>
+                <a href="html_files\registration.html">Регистрация</a>
             </div>
 
         </div>
