--- a/logIn.html
+++ b/logIn.html
@@ -62,6 +62,8 @@
             background-color: #cfa9cb;
             width: 100%;
             height: 80%;
+            border: 2px solid #463543;
+            border-radius: 20px;
             position: absolute;
             transform: translate(0, -50%);
             top: 50%;
@@ -74,6 +76,7 @@
             height: 100%;
             width: 50%;
             z-index: 10;
+            border: 2px solid #ebcadc;
             position: absolute;
             right: 0;
             margin-right: 3%;
