--- a/post.html
+++ b/post.html
@@ -431,7 +431,7 @@
             position: static;
             width: 100%;
             /* Прозрачный фон */
-            /* padding: 10px; */
+            padding: 0px;
             text-align: center;
             z-index: 999;
         }
@@ -552,12 +552,12 @@
         </div>
     </section>
 
-
+    <footer id="footer">
+        <div class="triangle_bottom"></div>
+    </footer>
 
 
 </body>
-<footer id="footer">
-    <div class="triangle_bottom"></div>
-</footer>
+
 
 </html>
