Max and Den are my lovely friends

--- a/Posting.html
+++ b/Posting.html
@@ -198,15 +198,13 @@
     <header>
         <div class="Header_Grid">
             <div class="Sing_In_window">
-                <a href="../html_files/logIn.html">Войти</a>
+                <a href="index.html">Главное меню</a>
             </div>
             <div class="Plus_window">
                 <div class="Header_Oval"></div>
                 <!-- Значёк плюса ебать -->
             </div>
-            <div class="Registration_window">
-                <a href="../html_files/registration.html">Регистрация</a>
-            </div>
+
 
         </div>
 
