--- a/index.html
+++ b/index.html
@@ -622,14 +622,14 @@
 <header>
     <div class="Header_Grid">
         <div class="Sing_In_window">
-            <a href="logIn.html">Войти</a>
+            <a href="Posting.html">Сделать пост</a>
         </div>
         <div class="Plus_window">
             <div class="Header_Oval"></div>
             <!-- Значёк плюса ебать -->
         </div>
         <div class="Registration_window">
-            <a href="registration.html">Регистрация</a>
+            <a href="logIn.html">Регистрация/Войти</a>
         </div>
     </div>
 </header>
