--- a/logIn.html
+++ b/logIn.html
@@ -215,15 +215,13 @@
 <header>
     <div class="Header_Grid">
         <div class="Sing_In_window">
-            <a href="logIn.html">эээ</a>
+            <a href="index.html">Главное меню</a>
         </div>
         <div class="Plus_window">
             <div class="Header_Oval"></div>
             <!-- Значёк плюса ебать -->
         </div>
-        <div class="Registration_window">
-            <a href="registration.html">эээ</a>
-        </div>
+
     </div>
 
 </header>
