--- a/logIn.html
+++ b/logIn.html
@@ -257,9 +257,14 @@
                     <input type="password" name="password" placeholder="  PASSWORD">
                 </div>
                 <p>FORGET PASSWORD?</p>
-                <button>LOG IN</button>
+                <button onclick="redirectToLoginPage()">LOG IN</button>
             </div>
+            <script>
+                function redirectToLoginPage() {
 
+                    window.location.href = "profile.html";
+                }
+            </script>
             <div class="signup hide">
                 <h2>SIGN UP</h2>
                 <div class="inputbox">
