update profile for change recipe

--- a/profile.html
+++ b/profile.html
@@ -550,7 +550,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 2</button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -565,7 +565,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 6</button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -586,8 +586,9 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 17</button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
-                    </ul>
 
+                    </ul>
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -608,8 +609,9 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 8</button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
-                    </ul>
 
+                    </ul>
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -630,7 +632,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 21</button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -646,7 +648,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
 
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -668,7 +670,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -684,7 +686,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -705,7 +707,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 17</button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -721,7 +723,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -737,7 +739,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                         <!-- <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden="true"></i> 0</li> -->
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
 
             </div>
@@ -759,7 +761,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
                     </ul>
-
+                    <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
                 </div>
                 <script>
                     const likeButtons = document.querySelectorAll('.like-button');
