update LIKE in profile & add change post

--- a/post.html
+++ b/post.html
@@ -485,7 +485,7 @@
                 <figcaption>Photo by Den</figcaption>
             </figure>
 
-            <h1>Cake <button id="likeButton" onclick="toggleLike()">&#10084</button></h1>
+            <h1>Cake <button id="likeButton" onclick="toggleLike()">&#10084</button><button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button></h1>
 
 
 
