--- a/profile.html
+++ b/profile.html
@@ -547,7 +547,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 2</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
                     <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
@@ -562,7 +562,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 6</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
                     <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
@@ -583,7 +583,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 17</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
 
@@ -606,7 +606,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 8</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
 
@@ -629,7 +629,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 21</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
                     <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
@@ -644,7 +644,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 3</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
 
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
@@ -666,7 +666,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 7</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
                     </ul>
@@ -682,7 +682,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 2</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
                     </ul>
@@ -704,7 +704,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 17</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                     </ul>
                     <button class="view-btn" onclick="window.location.href='Posting.html'">Редактировать</button>
@@ -719,7 +719,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 1</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
                     </ul>
@@ -735,7 +735,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 5</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
                         <!-- <li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fas fa-comment" aria-hidden="true"></i> 0</li> -->
                     </ul>
@@ -757,7 +757,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
                 <div class="gallery-item-info">
 
                     <ul>
-                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i> 3</button>
+                        <button class="like-button" aria-label="like"><i class="fas fa-heart" aria-hidden="true"></i></button>
                         <button class="view-btn" onclick="window.location.href='post.html'">Посмотреть</button>
 
                     </ul>
