--- a/html_files/Posting.html
+++ b/html_files/Posting.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../css_files/basic.css" />
     <link rel="stylesheet" type="text/css" href="../css_files/header.css" />
     <link rel="stylesheet" type="text/css" href="../css_files/footer.css" />
-    <link rel="stylesheet" type="text/css" href="../css_files/registration.css" />
+
+
+    <link rel="stylesheet" type="text/css" href="../css_files/Posting.css"/>
+
+    <script src="../JS_files/Posting.js"></script>
+
 
     <title>Печеньки</title>
 
@@ -21,7 +25,6 @@
 
 
 
-
 </head>
 
 <body>
@@ -29,15 +32,13 @@
     <header>
         <div class="Header_Grid">
             <div class="Sing_In_window">
-                <a href="../html_files/logIn.html">Войти</a>
+                <a href="../index.html">Главное меню</a>
             </div>
             <div class="Plus_window">
                 <div class="Header_Oval"></div>
                 <!-- Значёк плюса ебать -->
             </div>
-            <div class="Registration_window">
-                <a href="../html_files/registration.html">Регистрация</a>
-            </div>
+
 
         </div>
 
@@ -48,12 +49,12 @@
         <div class="registration_form">
             <div class="left_picture_container">
                 <div class="div_picture_container">
-                    <img src="../Tgr6rF0gываываыC8Q.png">
+                    <img src="Tgr6rF0gываываыC8Q.png">
                 </div>
 
             </div>
             <div class="form_container">
-                <p class="text_in_form">Войти</p>
+                <p class="text_in_form">Рецепт</p>
 
                 <div class="reigistration_form_samll_window input_mail">
 
@@ -80,9 +81,11 @@
 
 
                 <div class="Log_In">
-                    <button class="Log_In_BTN"><p class="text_in_form">Войти</p></button>
-
+                    <button class="Log_In_BTN" onclick="redirectToAnotherPage()"><p class="text_in_form">Сохранить</p></button>
                 </div>
+
+
+
 
             </div>
 
