--- a/profile.html
+++ b/profile.html
@@ -503,9 +503,9 @@ Remove or comment-out the code block below to see how the browser will fall-back
 
                 <h1 class="profile-user-name">Den_princess</h1>
 
-                <button class="btn profile-edit-btn">Редактировать профиль</button>
+                <!-- <button class="btn profile-edit-btn">Редактировать профиль</button> -->
 
-                <button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
+                <!-- <button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button> -->
 
 
             </div>
@@ -520,11 +520,11 @@ Remove or comment-out the code block below to see how the browser will fall-back
 
             </div>
 
-            <div class="profile-bio">
+            <!-- <div class="profile-bio">
 
                 <p><span class="profile-real-name">Den</span> Я люблю готовить</p>
 
-            </div>
+            </div> -->
 
         </div>
         <!-- End of profile section -->
